--- a/config/settings.json
+++ b/config/settings.json
@@ -1,13 +1,14 @@
 {
-  "trading_mode": 0,
-  "rolling_option": 0,
-  "ideal_price": 300,
-  "max_price": 520,
+  "ideal_price": 500,
+  "key_mode": false,
+  "max_price": 550,
   "loop_interval": 50,
   "item_type": 0,
-  "key_mode": false,
-  "use_balance_calculation": false,
+  "use_balance_calculation": true,
+  "trading_mode": 1,
+  "rolling_option": 0,
   "screen_width": 2560,
   "screen_height": 1440,
+  "tesseract_path": "",
   "log_level": "INFO"
 }
