--- a/config/settings.json
+++ b/config/settings.json
@@ -9,6 +9,7 @@
   "rolling_option": 0,
   "screen_width": 2560,
   "screen_height": 1440,
-  "tesseract_path": "",
+  "fast_sell_threshold": 200000,
+  "fast_sell": false,
   "log_level": "INFO"
 }
