1. 支持检测是否卡死 2. 修复若干bug 3. 添加购买二次确认功能(先关闭)

--- a/config/delay_config.yaml
+++ b/config/delay_config.yaml
@@ -18,7 +18,9 @@ delays:
     # 点击切换配装之后的延迟，延迟后才会检测价格，以防买到高价
     after_option_switch: 0.05
     # 价格异常后重试的延迟，异常原因主要是配装时卡顿导致价格迟迟没有出现
-    price_detection_retry: 0.05
+    price_detection_retry: 0.005
+    # 识别到可购买后，再执行一次延迟进行二次价格检测，主要是为了防止刷新太快买到高价子弹
+    second_price_detection_retry: 0.03
     # 点击购买按钮后，检测是否购买成功(也就是是否有弹窗)前的延迟，设置久一点让弹窗动画播完再检测
     after_buy: 2.0
     # 检测到购买失败(也就是有失败弹窗)后，按下esc退出后的延迟
