--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-numpy==2.2.5
+numpy==2.3.2
 PyQt5==5.15.11
+PyQt5_sip==12.17.0
 pyautogui==0.9.54
 keyboard==0.13.5
 PyYAML==6.0.2
-opencv-python~=4.12.0.88
+opencv_python==4.12.0.88
+opencv_python_headless==4.12.0.88
 pylint==3.3.4
 black==25.1.0
 isort==6.0.1
 pre-commit==4.3.0
-pytest==8.3.5
+pytest==8.4.1
+mss==10.1.0
+auto_mix_prep==0.2.0
+ruamel.base==1.0.0
