--- a/config/delay_config.yaml
+++ b/config/delay_config.yaml
@@ -20,7 +20,7 @@ delays:
     # 价格异常后重试的延迟，异常原因主要是配装时卡顿导致价格迟迟没有出现
     price_detection_retry: 0.005
     # 购买之前的延迟(二次检测场景会在检测前执行延迟)
-    before_buy: 0.0
+    before_buy: 0
     # 识别到可购买后，再执行一次延迟进行二次价格检测，主要是为了防止刷新太快买到高价子弹
     second_price_detection_retry: 0.02
     # 点击购买按钮后，检测是否购买成功(也就是是否有弹窗)前的延迟，设置久一点让弹窗动画播完再检测
@@ -89,3 +89,5 @@ delays:
     before_select_zero_dam: 1.5
     # 选择零号大坝后，点击开始行动按钮前等待的延迟
     before_start_action: 1.0
+    # 游戏闪退后，选择模式后进入特勤处后等待的延迟
+    after_enter_game_home: 8.0
